--- a/css/main.css
+++ b/css/main.css
@@ -441,23 +441,39 @@ body {
 }
 
 .cards {
+  display: inline-block;
   width: 100%;
   height: 120px;
   background: #fff;
   border-radius: 5px;
   padding-top: 20px;
   padding-left: 10px;
-  border: 1px solid rgba(143, 143, 143, 0.424);
+  border: 2px solid rgba(143, 143, 143, 0.424);
   position: relative;
 }
 
-.cards:hover,
-.cards:active {
-  border: 1px solid #3a3a94;
+.cards:not(:last-child) {
+  margin-bottom: 40px;
 }
 
-.cards:not(:last-child) {
-  margin-bottom: 30px;
+.cards:hover {
+  border: 2px solid #b0bed3;
+}
+
+.card__inp {
+  display: none;
+}
+
+.card__inp:checked + .card1 {
+  border: 2px solid #868caf;
+}
+
+.card__inp:checked + .card2 {
+  border: 2px solid #868caf;
+}
+
+.card__inp:checked + .card3 {
+  border: 2px solid #868caf;
 }
 
 .icons-svg {
