--- a/sass/blocks/_block.scss
+++ b/sass/blocks/_block.scss
@@ -12,10 +12,8 @@
         border-radius: 5px;
         overflow: hidden;
         box-shadow: 0px 5px 10px rgb(240, 232, 191);
-
     }
 }
-
 
 
 .left {
@@ -46,28 +44,44 @@
     margin-top: 45px;
 }
 
+
+
 .cards {
+    display: inline-block;
     width: 100%;
     height: 120px;
     background: #fff;
     border-radius: 5px;
     padding-top: 20px;
     padding-left: 10px;
-    border: 1px solid rgba(143, 143, 143, 0.424);
+    border: 2px solid rgba(143, 143, 143, 0.424);
 
     position: relative;
 }
 
-.cards:hover,
-.cards:active {
-    border: 1px solid rgb(58, 58, 148)
-}
-
 .cards:not(:last-child) {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
-.card1 {}
+.cards:hover {
+    border: 2px solid rgb(176, 190, 211);
+}
+
+.card__inp {
+    display: none;
+}
+
+.card__inp:checked+.card1 {
+    border: 2px solid rgb(134, 140, 175);
+}
+
+.card__inp:checked+.card2 {
+    border: 2px solid rgb(134, 140, 175);
+}
+
+.card__inp:checked+.card3 {
+    border: 2px solid rgb(134, 140, 175);
+}
 
 .icons-svg {
     height: 14px;
